# G3D_Practicas

./: CMakeLists.txt  README.md
IGL/: CMakeLists.txt
IGL/cmake/: Dependencies.cmake
IGL/include/IGL/: BOX.h  IGlib.h  PLANE.h  auxiliar.h  suzanne.h
IGL/src/: IGlib.cpp  OGLObject.cpp  OGLObject.h  auxiliar.cpp
p1GLSL/: CMakeLists.txt  main.cpp
p1GLSL/shaders_P1/: shader.v0.frag  shader.v0.vert  shader.v1.frag  shader.v1.vert  shader.v2.frag  shader.v2.vert  shader.v4.frag  shader.v4.vert  shader.v5.frag  shader.v5.vert  shader.v6.frag  shader.v6.vert  shader.vOb4.frag  shader.vOb4.vert  shader.vOp3.frag
p2GLSL/: CMakeLists.txt  main.cpp
p2GLSL/shaders_P2/: disney2012.frag  shader.ob1.frag  shader.ob1.vert  shader.ob2.frag  shader.ob2.vert  shader.ob3.directionalLight.frag  shader.ob3.spotlight.frag  shader.ob4.frag  shader.ob4.vert  shader.op1.frag  shader.op2.frag  shader.op3.frag  shader.op3.vert  shader.op4.frag  shader.op4.vert  shader.op5.frag  shader.op6.frag  shader.v0.vert  shader.v1.frag  shader.v1.vert  shader.v2.frag  shader.v2.vert  shader.v3.frag  shader_allvariables.frag  shader_allvariables.vert
p3OGL/: CMakeLists.txt  main.cpp
p3OGL/shaders_P3/: shader.ob1.frag  shader.op2_bumpMapping.frag  shader.op2_bumpMapping.vert  shader.v0.frag  shader.v0.vert  shader.v1.frag
p4OGL/: CMakeLists.txt  gbuffer.cpp  gbuffer.h  main.DOF.cpp  main.all.cpp  main.cpp  main.deferred.cpp  main.gaussianBlur.cpp  main.motionBlur.cpp  main.v0.cpp  main.v1.cpp
p4OGL/helpers/: framebuffer.cpp  framebuffer.h  gbuffer.cpp  gbuffer.h  shaderProgram.cpp  shaderProgram.h
p4OGL/shaders_P4/: deferred.light.frag  fwRendering.dof.frag  fwRendering.gaussianBlur.frag  fwRendering.v0.frag  postProcessing.dof.frag  postProcessing.gaussianBlur.frag  postProcessing.motionBlur.vert  postProcessing.v0.frag  postProcessing.v0.vert  postProcessing.v1.frag  postProcessing.v2.frag  postProcessing.v2.vert
p5OGL/: CMakeLists.txt
p5OGL/helpers/: framebuffer.h
p5OGL/shaders_P5/: postProcessing.gaussianBlur.frag
p5OGL/shaders_P5/p4OGL/helpers/: gbuffer.cpp
p5OGL/shaders_P5/p4OGL/shaders_P4/: deferred.geom.frag  fwRendering.vert  postProcessing.dof.frag
